# dioform

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  dagger.toml
.github/workflows/: dagger-demo.yaml  demo.yaml  deploy.yaml
crates/dioform/: Cargo.toml  README.md
crates/dioform-core/: Cargo.toml  README.md
crates/dioform-core/src/: collection_addressing.rs  field_store.rs  lib.rs  submission.rs  validation_chain.rs  validation_lifecycle.rs
crates/dioform-core/tests/: form_core.rs
crates/dioform-derive/: Cargo.toml  README.md
crates/dioform-derive/src/: lib.rs
crates/dioform-fullstack/: Cargo.toml  README.md
crates/dioform-fullstack/src/: lib.rs
crates/dioform-fullstack/tests/: fullstack_submit.rs
crates/dioform-garde/: Cargo.toml  README.md
crates/dioform-garde/src/: lib.rs
crates/dioform-garde/tests/: garde_adapter.rs
crates/dioform-validation-adapter/: Cargo.toml  README.md
crates/dioform-validation-adapter/src/: lib.rs
crates/dioform-validator/: Cargo.toml  README.md
crates/dioform-validator/src/: lib.rs
crates/dioform-validator/tests/: validator_adapter.rs
crates/dioform/src/: adapter_input_state.rs  adapter_runtime.rs  lib.rs  managed_submission.rs  selector_notifications.rs
crates/dioform/tests/: binding_contract.rs  derive_contract.rs  listener_contract.rs  observer_contract.rs  prelude.rs  tracer_bullet.rs  workspace_layering.rs
crates/dioform/tests/binding_contract/fail/: non_parsed_binding_parse_error.rs  non_parsed_binding_parse_error.stderr
crates/dioform/tests/derive_contract/fail/: collection_item_nested_collection.rs  collection_item_nested_collection.stderr  duplicate_field_name.rs  duplicate_field_name.stderr  enum_model.rs  enum_model.stderr  field_group_explicit_map_wrong_type.rs  field_group_explicit_map_wrong_type.stderr  field_group_generic.rs  field_group_generic.stderr  field_group_tuple_struct.rs  field_group_tuple_struct.stderr  generic_model.rs  generic_model.stderr  global_rename_policy.rs  global_rename_policy.stderr  private_field_accessor_outside_module.rs  private_field_accessor_outside_module.stderr  skipped_field_accessor.rs  skipped_field_accessor.stderr  tuple_field_component_traversal.rs  tuple_field_component_traversal.stderr  tuple_struct.rs  tuple_struct.stderr  union_model.rs  union_model.stderr  unit_struct.rs  unit_struct.stderr  unsupported_attribute.rs  unsupported_attribute.stderr  variant_inner_traversal.rs  variant_inner_traversal.stderr
crates/dioform/tests/derive_contract/pass/: core_crate_path.rs  custom_crate_path.rs  field_group_explicit_map.rs  field_group_map_clone_non_clone_model.rs  field_group_nested_mount.rs  field_options.rs  global_rename_policy.rs  named_struct_fields.rs  nested_collection_paths.rs  private_fields.rs  tuple_field_value.rs
crates/dioform/tests/listener_contract/fail/: exhaustive_listener_event_matching.rs  exhaustive_listener_event_matching.stderr
crates/dioform/tests/observer_contract/fail/: exhaustive_observer_matching.rs  exhaustive_observer_matching.stderr
demo/: Cargo.toml  Dioxus.toml  README.md  dagger-module.toml  dagger.dang  dagger.toml  package-lock.json  package.json  playwright.config.ts  screenshots.mjs  style.css  wrangler.toml
demo/e2e/: async-validation.spec.ts  file-fields.spec.ts  fixtures.ts  readiness.setup.ts  server-validation.spec.ts
demo/src/: app.rs  examples.rs  lib.rs  main.rs  pages.rs  server_api.rs  signup.rs  ui.rs  worker.rs
demo/src/components/: common.rs  examples.rs
demo/src/examples/: adapter_validation.rs  async_validation.rs  browser_submission.rs  collection_validation.rs  collections.rs  error_summary.rs  field_bindings.rs  field_groups.rs  file_fields.rs  minimal.rs  nested_paths.rs  observers.rs  parsed_inputs.rs  presentation.rs  serialization.rs  server_validation.rs  state_meta.rs  submit_errors.rs  submit_intents.rs  validation_modes.rs  validators.rs
demo/src/pages/: basics.rs  fields.rs  forms.rs  server.rs  submission.rs  validation.rs
demo/src/pages/forms/: checkout.rs  invoice.rs  presentation.rs  project_planner.rs  signup.rs  support.rs
docs/: async-validation.md  browser-submission.md  collection-fields.md  error-summary.md  file-fields.md  form-context.md  form-listeners.md  form-state-serialization.md  input-helpers.md  submit-intent.md  validation-adapters.md
docs/adr/: 0001-renderer-agnostic-core-dioxus-adapter-and-derive-macro.md  0002-use-library-owned-collection-item-identity.md  0003-use-separate-validation-adapter-crates.md  0004-add-core-scoped-submit-intent.md  0005-add-typed-field-group-maps.md  0005-use-separate-dioxus-fullstack-submit-adapter-crate.md  0006-use-typed-scoped-form-context.md  0007-use-browser-submit-preflight-without-async-waiting.md  0008-keep-file-fields-outside-form-draft.md  0009-add-task-spawner-seam-for-async-validation.md  0010-carve-form-core-into-field-store-submission-state-and-chain-executor.md  0011-do-not-extract-a-chain-executor-module.md  0012-use-a-shared-validation-adapter-support-crate.md  0013-keep-the-adapter-runtime-facade-over-adapter-state.md  0014-keep-collection-item-mutation-coordinated-in-form-core.md  0015-widen-the-task-spawner-seam-to-submission-spawns.md  0016-keep-the-per-target-async-validation-entry-points.md  0017-decline-whole-model-schema-coercion.md  0018-decline-public-validation-adapter-trait.md  0019-decline-can-submit-when-invalid-opt-out.md
docs/agents/: domain.md  issue-tracker.md
docs/archive/: mvp-boundaries.md  refactor-plan.md  tanstack-parity.md
