[workspace]
members = [
    "crates/dioform",
    "crates/dioform-core",
    "crates/dioform-derive",
    "crates/dioform-fullstack",
    "crates/dioform-garde",
    "crates/dioform-validation-adapter",
    "crates/dioform-validator",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sagikazarmark/dioform"
keywords = ["dioxus", "forms", "validation", "web"]
categories = ["web-programming", "gui"]
publish = true

[workspace.metadata.release]
sign-commit = true
sign-tag = true
shared-version = true
tag-message = "Release {{version}}"
tag-name = "v{{version}}"
