[package]
name = "demo"
version = "0.0.0"
edition = "2024"
rust-version = "1.92"
publish = false

# The crate builds as a binary (native fullstack server + wasm SPA client, via
# `main.rs`) AND as a `cdylib` for the Cloudflare Worker (via `lib.rs`).
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Cloudflare-SPA client: reaches the backend by fetching the Worker's `/api/*`
# routes. This is what `dx bundle --platform web` ships for the Worker.
web = [
    "dep:dioform",
    "dep:dioform-fullstack",
    "dep:dioform-garde",
    "dep:dioxus-code",
    "dep:garde",
    "dep:gloo-net",
    "dioxus/launch",
    "dioxus/web",
]
# Native fullstack client: calls Dioxus server functions directly (used by
# `dx serve`, not by the Worker).
fullstack-web = ["dioxus/fullstack", "web"]
# Native fullstack server (SSR + server functions). `launch` drives both halves
# (there are no custom Axum routes on the native server; those live only in the
# Worker), so `main.rs` stays a one-liner.
server = [
    "dep:dioform",
    "dep:dioform-fullstack",
    "dep:dioform-garde",
    "dep:dioxus-code",
    "dep:garde",
    "dioform-fullstack/server",
    "dioxus/fullstack",
    "dioxus/launch",
    "dioxus/server",
]
# Cloudflare Worker: static assets + the `/api/*` routes that back the SPA.
worker = [
    "dep:axum",
    "dep:serde_json",
    "dep:tower-service",
    "dep:worker",
    "dep:worker-macros",
]

[dependencies]
# The library being demonstrated. Only the page-rendering targets use it.
dioform = { path = "../crates/dioform", optional = true }
dioform-fullstack = { path = "../crates/dioform-fullstack", optional = true }
dioform-garde = { path = "../crates/dioform-garde", optional = true }

# Cloudflare Worker backend: plain Axum routes, no Dioxus.
axum = { version = "0.8", default-features = false, features = [
    "json",
], optional = true }
# Slim base: the rendering pieces the pages need, with the platform/fullstack
# features layered on per build target above. Kept lightweight so the Worker
# build (which renders no pages) does not drag in `launch`/`fullstack`.
dioxus = { version = "0.7", default-features = false, features = [
    "asset",
    "document",
    "hooks",
    "html",
    "macro",
    "router",
    "signals",
] }
# Compile-time syntax highlighting for the on-page source snippets. The `code!`
# macro embeds a pre-highlighted span tree at build time (no runtime
# highlighter). The Worker renders no pages, so it is left out of `worker`.
dioxus-code = { version = "0.1.2", optional = true }
garde = { version = "0.23", default-features = false, features = [
    "derive",
    "email",
], optional = true }
# SPA client → Worker `/api/*` fetch.
gloo-net = { version = "0.6", optional = true }
# `serde` is the only always-on dep: the pure signup logic (`signup.rs`) is
# shared by every target, including the Worker.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tower-service = { version = "0.3", optional = true }
worker = { version = "0.8", features = ["http", "axum"], optional = true }
worker-macros = { version = "0.8", features = ["http"], optional = true }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[workspace]
