[package]
name = "dioform-core"
version.workspace = true
description = "Renderer-agnostic typed form state core for Dioform."
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
