[package]
name = "dioform-derive"
version.workspace = true
description = "Derive macro for Dioform typed field paths"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "3", features = ["derive"] }
