[package]
name = "dioform-fullstack"
version.workspace = true
description = "Dioxus Fullstack submit adapters for Dioform"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
server = ["dep:dioxus-server", "dioxus-fullstack/server"]

[dependencies]
dioform = { workspace = true }

dioxus-core = { workspace = true }
dioxus-fullstack = { version = "0.7", default-features = false }
dioxus-server = { version = "0.7", optional = true }
serde = { workspace = true }
