[package]
name = "dioform-garde"
version.workspace = true
description = "Renderer-agnostic garde validation adapter for Dioform Core."
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
dioform-core = { path = "../dioform-core", version = "0.1.0" }
dioform-validation-adapter = { path = "../dioform-validation-adapter", version = "0.1.0" }
garde = { version = "0.23", default-features = false }
