[package]
name = "dioform-validation-adapter"
version.workspace = true
description = "Shared support for renderer-agnostic Dioform validation adapters"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dioform-core = { workspace = true }
