[package]
name = "dioform-validator"
version.workspace = true
description = "Renderer-agnostic validator validation adapter for Dioform Core."
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
dioform-core = { path = "../dioform-core", version = "0.1.0" }
dioform-validation-adapter = { path = "../dioform-validation-adapter", version = "0.1.0" }
validator = { version = "0.20", default-features = false }
