[package]
name = "dioform-validator"
version.workspace = true
description = "Renderer-agnostic validator validation adapter for Dioform Core"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
dioform-core = { workspace = true }
dioform-validation-adapter = { workspace = true }

validator = { version = "0.20", default-features = false }
