[package]
name = "dioform"
version.workspace = true
description = "Headless typed form state and Dioxus bindings for Rust form models."
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
serde = ["dioform-core/serde"]

[dependencies]
dioxus-core = "0.7"
dioxus-html = { version = "0.7", default-features = false, features = ["serialize"] }
dioform-core = { path = "../dioform-core", version = "0.1.1" }
dioform-derive = { path = "../dioform-derive", version = "0.1.1" }
futures-timer = { version = "3", features = ["wasm-bindgen"] }

[dev-dependencies]
dioxus = { version = "0.7", default-features = false, features = ["minimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trybuild = "1"
