[package]
name = "dioform"
version.workspace = true
description = "Headless typed form state and Dioxus bindings for Rust form models"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dioform-core/serde"]

[dependencies]
dioform-core = { workspace = true }
dioform-derive = { workspace = true }

dioxus-core = { workspace = true }
dioxus-html = { version = "0.7", default-features = false, features = ["serialize"] }
futures-timer = { version = "3", features = ["wasm-bindgen"] }

[dev-dependencies]
dioxus = { version = "0.7", default-features = false, features = ["minimal"] }
serde = { workspace = true }
serde_json = "1"
trybuild = "1"
